# airtable-personal-finance

./: .env.sample  LICENSE  README.md  main.py  pyproject.toml
tests/: test_main.py
